Enhance external link accessibility in index.html: Add target="_blank" and rel="noopener noreferrer" attributes to all GitHub project links for improved security and user experience when opening links in new tabs.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h1 class="text-5xl font-bold text-white mb-2 glow">tboy1337</h1>
         <p class="text-xl text-gray-300">Developer • Innovator • Problem Solver</p>
         <div class="mt-4 flex justify-center space-x-6">
-            <a href="https://github.com/tboy1337" class="text-gray-300 hover:text-white transition-colors" aria-label="GitHub Profile">
+            <a href="https://github.com/tboy1337" class="text-gray-300 hover:text-white transition-colors" aria-label="GitHub Profile" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github text-2xl"></i>
             </a>
             <a href="#contact-form" class="text-gray-300 hover:text-white transition-colors" aria-label="Contact Form" onclick="document.getElementById('contact-form').scrollIntoView({behavior: 'smooth'})">
@@ -146,7 +146,7 @@
                 <h2 class="text-2xl font-semibold mb-4">👋 About Me</h2>
                 <p class="text-gray-300">Passionate developer crafting tools that solve real-world problems. Specializing in system optimization, networking tools, cryptography utilities, and automation scripts.</p>
                 <div class="mt-4 flex space-x-4">
-                    <a href="https://github.com/tboy1337" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded transition-colors">GitHub Profile</a>
+                    <a href="https://github.com/tboy1337" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">GitHub Profile</a>
                     <a href="#contact-form" class="bg-teal-600 hover:bg-teal-700 text-white px-4 py-2 rounded transition-colors" onclick="document.getElementById('contact-form').scrollIntoView({behavior: 'smooth'})">Contact</a>
                 </div>
             </div>
@@ -167,7 +167,7 @@
         <section class="mt-12">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-3xl font-bold">🚀 Featured Projects</h2>
-                <a href="https://github.com/tboy1337?tab=repositories" class="text-indigo-400 hover:text-indigo-300 transition-colors">
+                <a href="https://github.com/tboy1337?tab=repositories" class="text-indigo-400 hover:text-indigo-300 transition-colors" target="_blank" rel="noopener noreferrer">
                     View All <i class="fas fa-arrow-right ml-1"></i>
                 </a>
             </div>
@@ -182,7 +182,7 @@
                         <h3 class="text-xl font-semibold mb-2">MultiSocks</h3>
                         <p class="mb-4 text-gray-300">A SOCKS proxy that aggregates multiple remote SOCKS proxies, increasing your bandwidth by distributing traffic across them.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/multisocks" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/multisocks" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
@@ -193,7 +193,7 @@
                         <h3 class="text-xl font-semibold mb-2">Dispatch-py</h3>
                         <p class="mb-4 text-gray-300">A SOCKS proxy that balances traffic between network interfaces, optimizing network performance.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/dispatch-py" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/dispatch-py" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
@@ -204,7 +204,7 @@
                         <h3 class="text-xl font-semibold mb-2">HideIP.me Proxy Tester</h3>
                         <p class="mb-4 text-gray-300">A tool for testing HTTP, SOCKS4, SOCKS5, and CONNECT proxies from hideip.me.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/hideip.me-proxy-tester" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/hideip.me-proxy-tester" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- Utilities & Tools -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -216,7 +216,7 @@
                         <h3 class="text-xl font-semibold mb-2">Subwhisper</h3>
                         <p class="mb-4 text-gray-300">A powerful tool using OpenAI's Whisper speech-to-text model to automatically generate subtitles for video files.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/subwhisper" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/subwhisper" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
@@ -227,7 +227,7 @@
                         <h3 class="text-xl font-semibold mb-2">DAV2MKV</h3>
                         <p class="mb-4 text-gray-300">A versatile tool for converting DAV video files to MKV or MP4 while maintaining perfect quality.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/dav2mkv" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/dav2mkv" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
@@ -238,7 +238,7 @@
                         <h3 class="text-xl font-semibold mb-2">ProfitPioneer</h3>
                         <p class="mb-4 text-gray-300">A comprehensive e-commerce analytics dashboard built with Streamlit that provides business intelligence insights.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/ProfitPioneer" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/ProfitPioneer" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- System Tools -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -250,7 +250,7 @@
                         <h3 class="text-xl font-semibold mb-2">Repair Windows</h3>
                         <p class="mb-4 text-gray-300">A collection of batch scripts to repair and optimize Windows systems.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/Repair-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/Repair-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for Cryptocurrency Wallet Generators Organization -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -262,7 +262,7 @@
                         <h3 class="text-xl font-semibold mb-2">Cryptocurrency Wallet Generators</h3>
                         <p class="mb-4 text-gray-300">A collection of open-source tools for generating wallets for various cryptocurrencies including Bitcoin, Ethereum, Solana, and more.</p>
                     </div>
-                    <a href="https://github.com/Cryptocurrency-Wallet-Generators" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Organization</a>
+                    <a href="https://github.com/Cryptocurrency-Wallet-Generators" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Organization</a>
                 </div>
                 <!-- New card for Video Streaming Server -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -274,7 +274,7 @@
                         <h3 class="text-xl font-semibold mb-2">Video Streaming Server</h3>
                         <p class="mb-4 text-gray-300">A simple web-based video streaming server that allows you to share your video library with friends over the internet.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/video-streaming-server" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/video-streaming-server" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for Git-Manager-Windows -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -286,7 +286,7 @@
                         <h3 class="text-xl font-semibold mb-2">Git Manager Windows</h3>
                         <p class="mb-4 text-gray-300">Simple batch scripts to automate the downloading, installation, uninstallation and updating of Git on Windows systems.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/Git-Manager-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/Git-Manager-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for TgCrypto2 -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -298,7 +298,7 @@
                         <h3 class="text-xl font-semibold mb-2">TgCrypto2</h3>
                         <p class="mb-4 text-gray-300">Fork of TgCrypto with working wheels for Python 3.9-3.13 on Windows, Mac, and Linux.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/tgcrypto2" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/tgcrypto2" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for SubtranSlate -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -310,7 +310,7 @@
                         <h3 class="text-xl font-semibold mb-2">SubtranSlate</h3>
                         <p class="mb-4 text-gray-300">A powerful and flexible tool for translating subtitle files between languages. Currently supports SRT format.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/SubtranSlate" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/SubtranSlate" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for SMSMaster -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -322,7 +322,7 @@
                         <h3 class="text-xl font-semibold mb-2">SMSMaster</h3>
                         <p class="mb-4 text-gray-300">A cross-platform Python application with Tkinter GUI that allows sending free SMS messages to mobile phones worldwide.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/SMSMaster" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/SMSMaster" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for scrapeer-py -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -334,7 +334,7 @@
                         <h3 class="text-xl font-semibold mb-2">Scrapeer-py</h3>
                         <p class="mb-4 text-gray-300">A tiny Python library that lets you scrape HTTP(S) and UDP trackers for torrent information.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/scrapeer-py" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/scrapeer-py" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for LineForge -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -346,7 +346,7 @@
                         <h3 class="text-xl font-semibold mb-2">LineForge</h3>
                         <p class="mb-4 text-gray-300">A cross-platform Python script to normalize line endings in text files between CRLF (Windows) and LF (Unix/Linux/macOS).</p>
                     </div>
-                    <a href="https://github.com/tboy1337/LineForge" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/LineForge" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for ClockClock24-py -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -358,7 +358,7 @@
                         <h3 class="text-xl font-semibold mb-2">ClockClock24-py</h3>
                         <p class="mb-4 text-gray-300">Python port of the ClockClock project.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/ClockClock24-py" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/ClockClock24-py" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
             </div>
         </section>
