--- a/index.html
+++ b/index.html
@@ -558,16 +558,8 @@
             <!-- Discord Arrow Keys Game Section -->
             <div class="game-container backdrop-blur-sm border border-white/10 game-section hidden" id="arrow-section">
                 <div class="game-header">
-                    <div class="game-stats">
-                        <div class="stat-box">
-                            <strong>Score:</strong> <span id="arrow-score">0</span>
-                        </div>
-                        <div class="stat-box">
-                            <strong>Streak:</strong> <span id="arrow-streak">0</span>
-                        </div>
-                    </div>
                     <div class="game-controls">
-                        <button type="button" id="start-arrow" class="game-btn">Start Game</button>
+                        <button type="button" id="start-arrow" class="game-btn">Start</button>
                         <button type="button" id="reset-arrow" class="game-btn" disabled>Reset</button>
                     </div>
                 </div>
