--- a/index.html
+++ b/index.html
@@ -626,9 +626,24 @@
                 navigator.serviceWorker.register('/sw.js')
                     .then(function(registration) {
                         console.log('ServiceWorker registration successful');
+                        
+                        // Check for service worker updates
+                        registration.addEventListener('updatefound', () => {
+                            const newWorker = registration.installing;
+                            newWorker.addEventListener('statechange', () => {
+                                if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                                    // New service worker installed, refresh page to get latest content
+                                    console.log('New service worker installed, refreshing page...');
+                                    window.location.reload();
+                                }
+                            });
+                        });
+                        
+                        // Force update check every time page loads
+                        registration.update();
                     })
                     .catch(function(error) {
-                        console.log('ServiceWorker registration failed');
+                        console.log('ServiceWorker registration failed:', error);
                     });
             });
         }
