Add notes counter to arrow game: Implement a notes played counter in games.js and display it in index.html. Update the counter during gameplay events to enhance user feedback.

--- a/index.html
+++ b/index.html
@@ -558,6 +558,11 @@
             <!-- Discord Arrow Keys Game Section -->
             <div class="game-container backdrop-blur-sm border border-white/10 game-section hidden" id="arrow-section">
                 <div class="game-header">
+                    <div class="game-stats">
+                        <div class="stat-box">
+                            <strong>Notes:</strong> <span id="arrow-notes">0</span>
+                        </div>
+                    </div>
                     <div class="game-controls">
                         <button type="button" id="start-arrow" class="game-btn">Start</button>
                         <button type="button" id="reset-arrow" class="game-btn" disabled>Reset</button>
