Implement Advanced Music Studio: Introduce a comprehensive music creation interface with a piano keyboard, control panel for instrument selection, volume, tempo, and effects. Enhance audio playback with a full chromatic scale, recording capabilities, and mobile touch controls. Update UI elements in index.html and styles in games.css for improved user experience.

--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
                         </button>
                     </li>
                     <li class="game-menu-item" data-game="arrow">
-                        <button type="button" class="px-4 py-2" aria-label="Play Music Keys Game" aria-pressed="false">
-                            <i class="fas fa-arrows-alt mr-2" aria-hidden="true"></i>Music Keys
+                        <button type="button" class="px-4 py-2" aria-label="Play Advanced Music Studio" aria-pressed="false">
+                            <i class="fas fa-music mr-2" aria-hidden="true"></i>Music Studio
                         </button>
                     </li>
                 </ul>
@@ -555,7 +555,7 @@
                 </div>
             </div>
 
-            <!-- Discord Arrow Keys Game Section -->
+            <!-- Advanced Music Studio Section -->
             <div class="game-container backdrop-blur-sm border border-white/10 game-section hidden" id="arrow-section">
                 <div class="game-header">
                     <div class="game-stats">
@@ -564,16 +564,18 @@
                         </div>
                     </div>
                     <div class="game-controls">
-                        <button type="button" id="start-arrow" class="game-btn">Start</button>
+                        <button type="button" id="start-arrow" class="game-btn">Start Studio</button>
                         <button type="button" id="reset-arrow" class="game-btn" disabled>Reset</button>
                     </div>
                 </div>
                 <div id="arrow-game" class="mt-4 centered-content">
                     <div class="welcome-box bg-black/60 p-8 text-center rounded-lg">
-                        <p class="text-xl mb-4">Music Keys</p>
-                        <p>Press the arrow keys to create your own music!</p>
-                        <p>Each arrow key plays a different note with electronic effects.</p>
-                        <p class="mt-4">Click "Start Game" to begin</p>
+                        <p class="text-xl mb-4">🎹 Advanced Music Studio</p>
+                        <p class="mb-2">Create music with a full chromatic keyboard!</p>
+                        <p class="mb-2">🎵 Use A-K keys for white notes, Q-P for black notes</p>
+                        <p class="mb-2">🎛️ Apply effects: reverb, delay, chorus & more</p>
+                        <p class="mb-2">🔄 Record and loop your compositions</p>
+                        <p class="mt-4">Click "Start Studio" to begin composing!</p>
                     </div>
                 </div>
             </div>
