--- a/index.html
+++ b/index.html
@@ -264,17 +264,17 @@
                     </div>
                     <a href="https://github.com/Cryptocurrency-Wallet-Generators" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Organization</a>
                 </div>
-                <!-- New card for Video Streaming Server -->
+                <!-- New card for MediaRelay -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
                         <div class="mb-3">
                             <span class="tag bg-blue-600">Python</span>
                             <span class="tag bg-gray-700">Streaming</span>
                         </div>
-                        <h3 class="text-xl font-semibold mb-2">Video Streaming Server</h3>
-                        <p class="mb-4 text-gray-300">A simple web-based video streaming server that allows you to share your video library with friends over the internet.</p>
+                        <h3 class="text-xl font-semibold mb-2">MediaRelay</h3>
+                        <p class="mb-4 text-gray-300">A comprehensive, production-ready video streaming server with enterprise-grade security, monitoring, and performance features for securely sharing your personal video library.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/video-streaming-server" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                    <a href="https://github.com/tboy1337/MediaRelay" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- New card for Git-Manager-Windows -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -617,7 +617,7 @@
     <footer class="bg-black/50 py-6 text-center backdrop-blur-sm mt-12">
         <div class="container mx-auto px-4">
             <p class="text-gray-300">© 2025 tboy1337 | Powered by curiosity, fueled by coffee ☕</p>
-            <p class="text-gray-500 mt-2 text-sm">Last updated: August 2025</p>
+            <p class="text-gray-500 mt-2 text-sm">Last updated: September 2025</p>
         </div>
     </footer>
 
