--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <section class="grid md:grid-cols-2 gap-8">
             <div class="bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                 <h2 class="text-2xl font-semibold mb-4">👋 About Me</h2>
-                <p class="text-gray-300">Passionate developer crafting tools that solve real-world problems. Specializing in system optimization, networking tools, cryptography utilities, and automation scripts.</p>
+                <p class="text-gray-300">Passionate developer with a diverse portfolio of projects spanning multiple technologies and programming languages. Always exploring new ideas and building innovative solutions across various domains.</p>
                 <div class="mt-4 flex space-x-4">
                     <a href="https://github.com/tboy1337" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">GitHub Profile</a>
                     <a href="#contact-form" class="bg-teal-600 hover:bg-teal-700 text-white px-4 py-2 rounded transition-colors" onclick="document.getElementById('contact-form').scrollIntoView({behavior: 'smooth'})">Contact</a>
@@ -160,6 +160,8 @@
                     <span class="bg-purple-500 text-white px-3 py-1 rounded-full">Batch</span>
                     <span class="bg-red-500 text-white px-3 py-1 rounded-full">PowerShell</span>
                     <span class="bg-pink-500 text-white px-3 py-1 rounded-full">HTML/CSS</span>
+                    <span class="bg-gray-600 text-white px-3 py-1 rounded-full">Markdown</span>
+                    <span class="bg-orange-500 text-white px-3 py-1 rounded-full">YAML</span>
                 </div>
             </div>
         </section>
@@ -172,6 +174,75 @@
                 </a>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Priority Projects -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-purple-600">Batch</span>
+                            <span class="tag bg-gray-700">System</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">WindowsRescue</h3>
+                        <p class="mb-4 text-gray-300">This repository provides a collection of batch scripts to repair, maintain, optimize and update Windows systems.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/WindowsRescue" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                </div>
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-purple-600">Batch</span>
+                            <span class="tag bg-gray-700">System</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">Git Manager Windows</h3>
+                        <p class="mb-4 text-gray-300">Batch scripts to automate the downloading, installation, uninstallation and updating of Git on Windows systems.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/Git-Manager-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                </div>
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Streaming</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">MediaRelay</h3>
+                        <p class="mb-4 text-gray-300">A video streaming server that allows you to securely share your personal video library over the internet with robust security, monitoring, and performance features.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/MediaRelay" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                </div>
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Multimedia</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">SubtitleTools</h3>
+                        <p class="mb-4 text-gray-300">A unified tool for comprehensive subtitle processing workflows, including extraction, conversion, and optimization.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/SubtitleTools" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                </div>
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Linting</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">Blint</h3>
+                        <p class="mb-4 text-gray-300">A lightweight and easy-to-use linter for Windows batch files (.bat). Helps identify syntax errors and enforce best practices.</p>
+                    </div>
+                    <a href="https://github.com/crosenblum/blint" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                </div>
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-gray-600">Legal</span>
+                            <span class="tag bg-gray-700">Documentation</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">Commercial Restricted License</h3>
+                        <p class="mb-4 text-gray-300">The Commercial Restricted License (CRL) is a software license designed to bridge the gap between fully open and fully proprietary software.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/Commercial-Restricted-License" class="inline-block bg-gradient-to-r from-gray-500 to-gray-600 hover:from-gray-600 hover:to-gray-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                </div>
+                
+                <!-- Other Projects -->
                 <!-- Network & Proxy Tools -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
@@ -210,28 +281,6 @@
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
                         <div class="mb-3">
-                            <span class="tag bg-blue-600">Python</span>
-                            <span class="tag bg-gray-700">Multimedia</span>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">SubtitleTools</h3>
-                        <p class="mb-4 text-gray-300">A unified tool for comprehensive subtitle processing workflows, including extraction, conversion, and optimization.</p>
-                    </div>
-                    <a href="https://github.com/tboy1337/SubtitleTools" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
-                </div>
-                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="card-content">
-                        <div class="mb-3">
-                            <span class="tag bg-blue-600">Python</span>
-                            <span class="tag bg-gray-700">Streaming</span>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">MediaRelay</h3>
-                        <p class="mb-4 text-gray-300">A video streaming server that allows you to securely share your personal video library over the internet with robust security, monitoring, and performance features.</p>
-                    </div>
-                    <a href="https://github.com/tboy1337/MediaRelay" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
-                </div>
-                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="card-content">
-                        <div class="mb-3">
                             <span class="tag bg-orange-600">Multi</span>
                             <span class="tag bg-gray-700">Multimedia</span>
                         </div>
@@ -251,41 +300,6 @@
                         <p class="mb-4 text-gray-300">A cross-platform Python application with PySide GUI that allows sending free SMS messages to mobile phones worldwide.</p>
                     </div>
                     <a href="https://github.com/tboy1337/FreeSMS" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
-                </div>
-                <!-- System Tools -->
-                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="card-content">
-                        <div class="mb-3">
-                            <span class="tag bg-purple-600">Batch</span>
-                            <span class="tag bg-gray-700">System</span>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">WindowsRescue</h3>
-                        <p class="mb-4 text-gray-300">This repository provides a collection of batch scripts to repair, maintain, optimize and update Windows systems.</p>
-                    </div>
-                    <a href="https://github.com/tboy1337/WindowsRescue" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
-                </div>
-                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="card-content">
-                        <div class="mb-3">
-                            <span class="tag bg-purple-600">Batch</span>
-                            <span class="tag bg-gray-700">System</span>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">Git Manager Windows</h3>
-                        <p class="mb-4 text-gray-300">Batch scripts to automate the downloading, installation, uninstallation and updating of Git on Windows systems.</p>
-                    </div>
-                    <a href="https://github.com/tboy1337/Git-Manager-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
-                </div>
-                <!-- Development Tools -->
-                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="card-content">
-                        <div class="mb-3">
-                            <span class="tag bg-blue-600">Python</span>
-                            <span class="tag bg-gray-700">Linting</span>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">Blint</h3>
-                        <p class="mb-4 text-gray-300">A lightweight and easy-to-use linter for Windows batch files (.bat). Helps identify syntax errors and enforce best practices.</p>
-                    </div>
-                    <a href="https://github.com/crosenblum/blint" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <!-- Utilities & Tools -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
@@ -345,18 +359,6 @@
                         <p class="mb-4 text-gray-300">A collection of open-source tools for generating wallets for various cryptocurrencies including Bitcoin, Ethereum, Solana, and more.</p>
                     </div>
                     <a href="https://github.com/Cryptocurrency-Wallet-Generators" class="inline-block bg-gradient-to-r from-yellow-500 to-orange-600 hover:from-yellow-600 hover:to-orange-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Organization</a>
-                </div>
-                <!-- Legal -->
-                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="card-content">
-                        <div class="mb-3">
-                            <span class="tag bg-gray-600">Legal</span>
-                            <span class="tag bg-gray-700">Documentation</span>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-2">Commercial Restricted License</h3>
-                        <p class="mb-4 text-gray-300">The Commercial Restricted License (CRL) is a software license designed to bridge the gap between fully open and fully proprietary software.</p>
-                    </div>
-                    <a href="https://github.com/tboy1337/Commercial-Restricted-License" class="inline-block bg-gradient-to-r from-gray-500 to-gray-600 hover:from-gray-600 hover:to-gray-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
             </div>
         </section>
@@ -852,3 +854,4 @@
     </script>
 </body>
 </html>
+
