Refine project description for SubtitleTools in index.html and README.md: Simplify wording for clarity and consistency across documentation.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <span class="tag bg-gray-700">Multimedia</span>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">SubtitleTools</h3>
-                        <p class="mb-4 text-gray-300">A unified tool for comprehensive subtitle processing workflows, including extraction, conversion, and optimization.</p>
+                        <p class="mb-4 text-gray-300">A tool for subtitle processing workflows, including extraction, conversion and optimization.</p>
                     </div>
                     <a href="https://github.com/tboy1337/SubtitleTools" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
