Update project name from "Blint" to "Blinter" in index.html and README.md, reflecting the new repository link and enhancing clarity in project descriptions.

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
                             <span class="tag bg-blue-600">Python</span>
                             <span class="tag bg-gray-700">Linting</span>
                         </div>
-                        <h3 class="text-xl font-semibold mb-2">Blint</h3>
+                        <h3 class="text-xl font-semibold mb-2">Blinter</h3>
                         <p class="mb-4 text-gray-300">A lightweight and easy-to-use linter for Windows batch files (.bat). Helps identify syntax errors and enforce best practices.</p>
                     </div>
-                    <a href="https://github.com/crosenblum/blint" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
+                    <a href="https://github.com/tboy1337/Blinter" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors" target="_blank" rel="noopener noreferrer">View Project</a>
                 </div>
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
