Remove console log statements from games.js to clean up code and improve performance. Add aria-label attributes to buttons in index.html for better accessibility. Increment service worker cache version to v1.0.13 for enhanced asset management.

--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
                                 type="submit" 
                                 id="submit-btn"
                                 class="bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-semibold px-8 py-3 rounded-lg transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-indigo-500/50"
+                                aria-label="Submit contact form"
                             >
                                 <i class="fas fa-paper-plane mr-2"></i>
                                 <span id="submit-text">Send Message</span>
@@ -528,8 +529,8 @@
                         </div>
                     </div>
                     <div class="game-controls">
-                        <button type="button" id="start-snake" class="game-btn">Start Game</button>
-                        <button type="button" id="reset-snake" class="game-btn" disabled>Reset</button>
+                        <button type="button" id="start-snake" class="game-btn" aria-label="Start Snake Game">Start Game</button>
+                        <button type="button" id="reset-snake" class="game-btn" disabled aria-label="Reset Snake Game">Reset</button>
                     </div>
                 </div>
                 <div id="snake-game" class="mt-4 centered-content">
@@ -554,8 +555,8 @@
                         </div>
                     </div>
                     <div class="game-controls">
-                        <button type="button" id="start-typing" class="game-btn">Start Test</button>
-                        <button type="button" id="reset-typing" class="game-btn" disabled>Reset</button>
+                        <button type="button" id="start-typing" class="game-btn" aria-label="Start Typing Speed Test">Start Test</button>
+                        <button type="button" id="reset-typing" class="game-btn" disabled aria-label="Reset Typing Speed Test">Reset</button>
                     </div>
                 </div>
                 <div id="typing-game" class="mt-4 centered-content">
@@ -576,8 +577,8 @@
                         </div>
                     </div>
                     <div class="game-controls">
-                        <button type="button" id="start-arrow" class="game-btn">Start</button>
-                        <button type="button" id="reset-arrow" class="game-btn" disabled>Reset</button>
+                        <button type="button" id="start-arrow" class="game-btn" aria-label="Start Music Keys Game">Start</button>
+                        <button type="button" id="reset-arrow" class="game-btn" disabled aria-label="Reset Music Keys Game">Reset</button>
                     </div>
                 </div>
                 <div id="arrow-game" class="mt-4 centered-content">
