--- a/index.html
+++ b/index.html
@@ -623,6 +623,13 @@
                     <h3 class="text-lg text-center font-semibold">YOLO</h3>
                     <p class="text-center text-gray-300 text-sm mt-1">You want it? You merge it</p>
                 </div>
+                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
+                    <div class="w-16 h-16 mb-3 flex items-center justify-center">
+                        <img src="starstruck-default.png" alt="Starstruck Achievement" class="w-full h-full object-contain" loading="lazy" width="64" height="64">
+                    </div>
+                    <h3 class="text-lg text-center font-semibold">Starstruck</h3>
+                    <p class="text-center text-gray-300 text-sm mt-1">Created a repository with many stars</p>
+                </div>
             </div>
         </section>
     </main>
